--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
 <body>
     <section class="top">
         <header>TO ALL YOU SAD BOIZ OUT THERE</header>
-            <a href="http://127.0.0.1:5500/sadboikeyworldwide.html" style="text-decoration:none "> <section class="disco">Discography </section> </a>
-            <a href="http://127.0.0.1:5500/products.html" style="text-decoration:none "> <section class="product">Products</section>  </a>
-            <a href="http://127.0.0.1:5500/tour.html" style="text-decoration:none ">  <section class="tour">Tours & Events</section> </a>
+            <a href="https://acid1738.github.io/sadboizworldwide/" style="text-decoration:none "> <section class="disco">Discography </section> </a>
+            <a href="https://acid1738.github.io/sadboizworldwide/products" style="text-decoration:none "> <section class="product">Products</section>  </a>
+            <a href="https://acid1738.github.io/sadboizworldwide/tour" style="text-decoration:none ">  <section class="tour">Tours & Events</section> </a>
             <section class="contact" >Contact</section> 
          </body>
        </section> 
