--- a/index.html
+++ b/index.html
@@ -23,25 +23,32 @@
         <section class="interlude">
             <h3>Interlude</h3>
             <img src="https://is3-ssl.mzstatic.com/image/thumb/Music122/v4/8a/26/3d/8a263d0e-6442-38ed-5402-ce1602399df1/35aa1080-a6ee-447c-8220-3f2a99ed0de9.jpg/316x316cc.webp" >
-            <h4>27 AUG 2022</h4>
-             <h4>Intro</h4> <div> Sadboikey ft Ykthegreat <br>  02:23</div> <br>
-             <h4>Goodbye Thriller </h4> <div>  Sadboikey <br>01:44</div></div> <br>
-             <h4> Out(ro) With A Bang </h4> <div>  Sadboikey <br>00:57</div></div> <br>
+                 <h4>27 AUG 2022</h4>
+                     <div class="song1"> <img src="https://is3-ssl.mzstatic.com/image/thumb/Music122/v4/8a/26/3d/8a263d0e-6442-38ed-5402-ce1602399df1/35aa1080-a6ee-447c-8220-3f2a99ed0de9.jpg/316x316cc.webp" class="al">
+                     Intro  <br> Sadboikey ft Ykthegreat <br>  02:23 <p class="jst" >⋮</p> <br> 
+                      </div> <br>
+                     <div class="song1"> <img src="https://is3-ssl.mzstatic.com/image/thumb/Music122/v4/8a/26/3d/8a263d0e-6442-38ed-5402-ce1602399df1/35aa1080-a6ee-447c-8220-3f2a99ed0de9.jpg/316x316cc.webp" class="al">
+                     Goodbye Thriller  <br> Sadboikey  <br>  01:44  <p class="jst" >⋮</p> </div><br>
+                     <div class="song1"> <img src="https://is3-ssl.mzstatic.com/image/thumb/Music122/v4/8a/26/3d/8a263d0e-6442-38ed-5402-ce1602399df1/35aa1080-a6ee-447c-8220-3f2a99ed0de9.jpg/316x316cc.webp" class="al">
+                     Outro <br> Sadboikey  <br> 00:57 <p class="jst">⋮</p> </div> <br>
+                
         </section>
     </section>
 
+
     
 
-    <section class="songlist">
+   <section class="songlist">
         <h2>Songs</h2>
-        <div> No chill <br> Single-2022</div> <br>
-        <div> In My Feels <br> Single-2022</div> <br>
-        <div> Complicated <br>Single-2022</div> <br>
-        <div> Intro <br>Interlude-2022</div> <br>
-        <div> Goddbye <br>Interlude-2022</div> <br>
-        <div> Out(ro) With A Bang<br>Interlude-2022</div> <br>
+        <div class="single" > <strong>No Chill <p class="ey" >⋮</p> </strong> <br> Single-2022</div> <br>
+        <div  class="single" ><Strong>In My Feels <p class="ey" >⋮</p> </Strong> <br> Single-2022</div> <br>
+        <div class="single" > <strong>Complicated  <p class="ey" >⋮</p> </strong> <br>Single-2022</div> <br>
+        <div class="single" > <strong>Intro <p class="ey">⋮</p> </strong> <br>Interlude-2022</div> <br>
+        <div class="single" > <strong>Goodbye <p class="ey">⋮</p> </strong> <br>Interlude-2022</div> <br>
+        <div class="single" > <strong> Outro <p class="ey">⋮</p> <br> </strong> <div>Interlude-2022</div></div> <br>
     </section>
 </section>
+
 
 
 <script>
