--- a/products.html
+++ b/products.html
@@ -22,5 +22,10 @@
     </ul>
 </section>
     
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8603612227358860"
+     crossorigin="anonymous"></script>
+
+     <img src="beat.png" alt="beat">
+    
 </body>
 </html>
