--- a/products.html
+++ b/products.html
@@ -10,7 +10,7 @@
     <header>TO ALL YOU SAD BOIZ OUT THERE</header>
    <a href="https://acid1738.github.io/sadboizworldwide/" style="text-decoration:none "> <section class="disco">Discography </section> </a>
     <a href="https://acid1738.github.io/sadboizworldwide/products" style="text-decoration:none "> <section class="product">Products</section>  </a>
-    <a href="https://acid1738.github.io/sadboizworldwide/tour" style="text-decoration:none ">  <section class="tour">Tours & Events</section> </a>
+    <a href="https://acid1738.github.io/sadboizworldwide/tour" style="text-decoration:none ">  <section class="tour">Events</section> </a>
     <a href="https://acid1738.github.io/sadboizworldwide/contact" style="text-decoration:none "> <section class="contact" >Contact</section> </a>
     </section>
     <section id="products">
