--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
       </body>
     </section>   
 
+<section id="profile">
+<img id="sthombe" src="pic.png" alt="sthombe"> <div class="intro"> Dancer,Singer,Songwriter,Producer,Digital Artist <br><br>
+     Yamkela Prince Ndzinya <br> <br> 
+     Interlude is availabe on all streaming playforms <br> <br>
+      <a href="http://127.0.0.1:5500/contact.html"> <button> Listen Now</button></a> </div>
+</section>
+
 <section id="middle">
     <section class="albums">
         <h2>Albums</h2>
