--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </section>   
 
 <section id="profile">
-<img id="sthombe" src="pic.png" alt="sthombe"> <div class="intro"> Dancer,Singer,Songwriter,Producer,Digital Artist <br><br>
+<img id="sthombe" src="pic.png" alt="sthombe"> <div class="intro"> Dancer,Singer,Songwriter <br> Producer,Digital Artist <br><br>
      Yamkela Prince Ndzinya <br> <br> 
-     Interlude is availabe on all streaming playforms <br> <br>
+     Interlude is out <br> <br>
       <a href="http://127.0.0.1:5500/contact.html"> <button> Listen Now</button></a> </div>
 </section>
 
