--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,13 @@
         
        </section> 
     <section id="contact">
-        <div>Apple Music</div>
-        <div>Deezer</div>
-        <div>Facebook</div>
-        <div>Instagram</div>
-        <div>Onlyfans</div>
-        <div>Souncloud</div>
-        <div>Spotify</div>
-        <div>Whatsapp</div>
+       <a href="https://music.apple.com/za/artist/sadboikey/1605483378" style="text-decoration:none"><div class="apple">Apple Music</div></a>
+        <div class="facebook">Facebook</div>
+         <a href="https://www.instagram.com/itsgottobekey/" style="text-decoration:none;" ><div class="instagram">Instagram</div></a>
+        <a href="https://onlyfans.com/miakhalifa" style="text-decoration:none "><div class="onlyfan">Onlyfans</div></a> 
+        <a href="https://soundcloud.com/user-313934752" style="text-decoration:none ;" > <div  class="soundcloud">Souncloud</div> </a>
+        <a href="https://open.spotify.com/artist/6Bu4eowEyvq8omhuuc7aSM" style="text-decoration:none ;" > <div class="spotify">Spotify</div></a> 
+        <a  href="https://wa.me/27833895597" style="text-decoration:none;" > <div class="whatsapp">Whatsapp</div> </a> 
         
     </section>
 </body>
