--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
         
        </section> 
        <section id="contact">
-        <a href="https://music.apple.com/za/artist/sadboikey/1605483378" style="text-decoration:none"><div class="apple">Apple Music</div></a>
-         <div class="facebook">Facebook</div>
-          <a href="https://www.instagram.com/itsgottobekey/" style="text-decoration:none;" ><div class="instagram">Instagram</div></a>
+         <a href="https://music.apple.com/za/artist/sadboikey/1605483378" style="text-decoration:none"><div class="apple">Apple Music</div></a>
+         <a href="https://www.facebook.com/itsgottobekey?mibextid=ZbWKwL"> <div class="facebook">Facebook</div></a>
+         <a href="https://www.instagram.com/itsgottobekey/" style="text-decoration:none;" ><div class="instagram">Instagram</div></a>
          <a href="https://onlyfans.com/miakhalifa" style="text-decoration:none "><div class="onlyfan">Onlyfans</div></a> 
          <a href="https://soundcloud.com/user-313934752" style="text-decoration:none ;" > <div  class="soundcloud">Souncloud</div> </a>
          <a href="https://open.spotify.com/artist/6Bu4eowEyvq8omhuuc7aSM" style="text-decoration:none ;" > <div class="spotify">Spotify</div></a> 
