--- a/tour.html
+++ b/tour.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="tour.css">
-    <title>Document</title>
+    <title>SadBoizWorldWide</title>
 </head>
 <body>    <section class="top">
     <header>TO ALL YOU SAD BOIZ OUT THERE</header>
        <a href="https://acid1738.github.io/sadboizworldwide/" style="text-decoration:none "> <section class="disco">Discography </section> </a>
     <a href="https://acid1738.github.io/sadboizworldwide/products" style="text-decoration:none "> <section class="product">Products</section>  </a>
     <a href="https://acid1738.github.io/sadboizworldwide/tour" style="text-decoration:none ">  <section class="tour">Events</section> </a>
-    <a href="https://acid1738.github.io/sadboizworldwide/contact" style="text-decoration:none "> <section class="contact" >Contact</section> </a>
+    <a href="https://acid1738.github.io/sadboizworldwide/contact" style="text-decoration:none "> <section class="contact" >Platforms</section> </a>
      </body>
     </section> 
     <div>Non yet but I will be performing soon <br> come back later</div>
